--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -19,6 +19,7 @@ NEXT_PUBLIC_HOMEPAGE_CHARTS=['daily_txs']
 NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/recallnet/blockscout/refs/heads/master/apps/block_scout_web/assets/static/images/Recall_LogoLockup_Black.svg
 NEXT_PUBLIC_NETWORK_ICON=https://raw.githubusercontent.com/recallnet/blockscout/refs/heads/master/apps/block_scout_web/assets/static/images/Square-250x250-black.svg
 NEXT_PUBLIC_NETWORK_ICON_DARK=https://raw.githubusercontent.com/recallnet/blockscout/refs/heads/master/apps/block_scout_web/assets/static/images/Square-250x250-white.svg
+NEXT_PUBLIC_OG_IMAGE_URL=https://raw.githubusercontent.com/recallnet/blockscout/refs/heads/master/apps/block_scout_web/assets/static/images/Recall_og_image.png
 
 # NEXT_PUBLIC_VISUALIZE_API_HOST=http://visualize.explorer.testnet.recall.network
 
