fix: cors stats api is configured correctly

--- a/docker-compose/envs/localnet.env
+++ b/docker-compose/envs/localnet.env
@@ -19,6 +19,7 @@ NEXT_PUBLIC_IS_TESTNET=true
 
 # stats
 STATS__BLOCKSCOUT_API_URL=http://host.docker.internal:5050
+STATS_CORS_ORIGIN_URL=http://localhost:5050
 
 # user ops indexer
 USER_OPS_INDEXER__INDEXER__RPC_URL=ws://host.docker.internal:8645 # eth api facade
