--- a/docker-compose/services/stats.yml
+++ b/docker-compose/services/stats.yml
@@ -48,3 +48,5 @@ services:
       - STATS__CREATE_DATABASE=true
       - STATS__RUN_MIGRATIONS=true
       - STATS__BLOCKSCOUT_API_URL=${STATS__BLOCKSCOUT_API_URL}
+      - STATS__SERVER__HTTP__CORS__ENABLED=true
+      - STATS__SERVER__HTTP__CORS__ALLOWED_ORIGIN=*
