fix: the caddyfile and nginx fixed for testnet

--- a/docker-compose/envs/testnet.env
+++ b/docker-compose/envs/testnet.env
@@ -19,7 +19,7 @@ NEXT_PUBLIC_IS_TESTNET=true
 
 # stats
 STATS__BLOCKSCOUT_API_URL=https://explorer.testnet.recall.network
-STATS_CORS_ORIGIN_URL=https://stats.explorer.testnet.recall.network
+STATS_CORS_ORIGIN_URL=https://explorer.testnet.recall.network
 
 # user ops indexer
 USER_OPS_INDEXER__INDEXER__RPC_URL=wss://evm.node-0.testnet.recall.network/
