env updates after upstream merge

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -1,4 +1,5 @@
-ETHEREUM_JSONRPC_VARIANT=geth
+# This value will be based on the parent chain, i.e. `filecoin` for Testnet and `anvil` for localnet
+ETHEREUM_JSONRPC_VARIANT=fixme_in_net_specific_file
 DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@block-explorer-db:5432/blockscout
 
 # DATABASE_EVENT_URL=
@@ -183,7 +184,7 @@ API_V1_WRITE_METHODS_DISABLED=false
 # INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 
 INDEXER_DISABLE_PENDING_TRANSACTIONS_FETCHER=false
-INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
+INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=true
 
 # INDEXER_DISABLE_CATALOGED_TOKEN_UPDATER_FETCHER=
 # INDEXER_DISABLE_BLOCK_REWARD_FETCHER=
