--- a/docker-compose/envs/localnet.env
+++ b/docker-compose/envs/localnet.env
@@ -1,10 +1,11 @@
 CHAIN_ID='248163216'
 
 # backend
-ETHEREUM_JSONRPC_HTTP_URL=http://host.docker.internal:8645
-ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8645
-ETHEREUM_JSONRPC_WS_URL=ws://host.docker.internal:8645
-ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=http://host.docker.internal:8745
+ETHEREUM_JSONRPC_HTTP_URL=http://172.17.0.1:8645 # TODO: not sure if this works on mac, but `host.docker.internal` isn't working for linux
+ETHEREUM_JSONRPC_TRACE_URL=http://172.17.0.1:8645
+ETHEREUM_JSONRPC_VARIANT=geth
+ETHEREUM_JSONRPC_WS_URL=ws://172.17.0.1:8645
+ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=http://172.17.0.1:8745
 
 # frontend
 NEXT_PUBLIC_API_HOST=localhost
@@ -18,10 +19,10 @@ NEXT_PUBLIC_VISUALIZE_API_HOST=http://localhost:8081
 NEXT_PUBLIC_IS_TESTNET=true
 
 # stats
-STATS__BLOCKSCOUT_API_URL=http://host.docker.internal:5050
+STATS__BLOCKSCOUT_API_URL=http://172.17.0.1:5050
 STATS_CORS_ORIGIN_URL=http://localhost:5050
 
 # user ops indexer
-USER_OPS_INDEXER__INDEXER__RPC_URL=ws://host.docker.internal:8645 # eth api facade
+USER_OPS_INDEXER__INDEXER__RPC_URL=ws://172.17.0.1:8645 # eth api facade
 USER_OPS_INDEXER__DATABASE__CONNECT__URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@block-explorer-db:5432/blockscout
 USER_OPS_INDEXER__DATABASE__RUN_MIGRATIONS=true
