--- a/docker-compose/envs/testnet.env
+++ b/docker-compose/envs/testnet.env
@@ -3,6 +3,7 @@ CHAIN_ID='2481632'
 # backend
 ETHEREUM_JSONRPC_HTTP_URL=https://evm.node-0.testnet.recall.network/
 ETHEREUM_JSONRPC_TRACE_URL=https://evm.node-0.testnet.recall.network/
+ETHEREUM_JSONRPC_VARIANT=geth
 ETHEREUM_JSONRPC_WS_URL=wss://evm.node-0.testnet.recall.network/
 ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=https://evm.node-1.testnet.recall.network/
 
