--- a/docker-compose/services/backend.yml
+++ b/docker-compose/services/backend.yml
@@ -13,6 +13,7 @@ services:
     environment:
       - ETHEREUM_JSONRPC_HTTP_URL=${ETHEREUM_JSONRPC_HTTP_URL}
       - ETHEREUM_JSONRPC_TRACE_URL=${ETHEREUM_JSONRPC_TRACE_URL}
+      - ETHEREUM_JSONRPC_VARIANT=${ETHEREUM_JSONRPC_VARIANT}
       - ETHEREUM_JSONRPC_WS_URL=${ETHEREUM_JSONRPC_WS_URL}
       - ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=${ETHEREUM_JSONRPC_FALLBACK_HTTP_URL}
       - INDEXER_CATCHUP_BLOCKS_CONCURRENCY=1
